Started implementation of walls.