@@ -1,7 +1,7 @@
 package RoboRally.Game.Board;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 
 /**
  * Catalog for the tile.tsx objects.
@@ -50,27 +50,7 @@ public enum TileID {
     BELT_FAST_S_TO_W(28),
 
     /**
-     * Special Fast Conveyer belts
-     * Where <>XYZ reads
-     * X = indirection one
-     * Y = indirection two
-     * Z = direction out
-     */
-    BELT_FAST_SWN(73),
-    BELT_FAST_WNE(74),
-    BELT_FAST_NES(75),
-    BELT_FAST_ESW(76),
-    BELT_FAST_SEN(77),
-    BELT_FAST_WSE(78),
-    BELT_FAST_NSE(81),
-    BELT_FAST_WES(82),
-    BELT_FAST_NSW(83),
-    BELT_FAST_WEN(84),
-    BELT_FAST_NEW(85),
-    BELT_FAST_NWS(86),
-
-    /**
-     * Normal BELT_ belts
+     * Normal conveyor belts
      */
     BELT_W_TO_S(33),
     BELT_N_TO_W(34),
@@ -87,23 +67,35 @@ public enum TileID {
 
     /**
      * Special Normal Conveyor belts
-     * Where <>XYZ reads
-     * X = indirection one
-     * Y = indirection two
-     * Z = direction out
      */
-    BELT_SWN(57),
-    BELT_WNE(58),
-    BELT_NES(59),
-    BELT_ESW(60),
-    BELT_NSE(61),
-    BELT_EWS(62),
-    BELT_SEN(65),
-    BELT_WSE(66),
-    BELT_NWS(67),
-    BELT_ENW(68),
-    BELT_WEN(69),
-    BELT_NSW(70),
+    BELT_N_E_TURN_L(57),
+    BELT_E_S_TURN_L(58),
+    BELT_S_W_TURN_L(59),
+    BELT_W_N_TURN_L(60),
+    BELT_E_S_TURN_L_N_TURN_R(61),
+    BELT_S_W_TURN_L_E_TURN_R(62),
+    BELT_N_W_TURN_R(65),
+    BELT_E_N_TURN_R(66),
+    BELT_S_E_TURN_R(67),
+    BELT_W_S_TURN_R(68),
+    BELT_N_W_TURN_R_E_TURN_L(69),
+    BELT_W_S_TURN_R_N_TURN_L(70),
+
+    /**
+     * Special Fast Conveyor belts
+     */
+    BELT_FAST_N_E_TURN_L(73),
+    BELT_FAST_E_S_TURN_L(74),
+    BELT_FAST_S_W_TURN_L(75),
+    BELT_FAST_W_N_TURN_L(76),
+    BELT_FAST_E_S_TURN_L_N_TURN_R(77),
+    BELT_FAST_S_W_TURN_L_E_TURN_R(78),
+    BELT_FAST_N_W_TURN_R(81),
+    BELT_FAST_E_N_TURN_R(82),
+    BELT_FAST_S_E_TURN_R(83),
+    BELT_FAST_W_S_TURN_R(84),
+    BELT_FAST_N_W_TURN_R_E_TURN_L(85),
+    BELT_FAST_W_S_TURN_R_N_TURN_L(86),
 
     /**
      * Laser beams
@@ -111,10 +103,6 @@ public enum TileID {
     LASER_HORIZONTAL(39),
     LASER_VERTICAL(47),
     LASER_CROSSED(40),
-
-    LASER_DOUBLE_HORIZONTAL(102),
-    LASER_DOUBLE_VERTICAL(103),
-    LASER_DOUBLE_CROSSED(101),
 
     /**
      * Walls
@@ -140,47 +128,11 @@ public enum TileID {
     LASER_WALL_DOUBLE_E(95);
 
 
-    /**
-     * Start positions
-     */
-    public final static List<TileID> START_POSITIONS = Arrays.asList(START_1, START_2, START_3, START_4, START_5,
-            START_6, START_7, START_8);
-
-    /**
-     *
-     */
-    public final static List<TileID> FLAGS = Arrays.asList(FLAG_1, FLAG_2, FLAG_3, FLAG_4);
-    
-    /**
-     * Walls
-     */
-    public final static List<TileID> WALLS_NORTH = Arrays.asList(WALL_N, WALL_NE, WALL_NW, LASER_WALL_N, LASER_WALL_DOUBLE_N);
-    public final static List<TileID> WALLS_WEST = Arrays.asList(WALL_W, WALL_NW, WALL_SW, LASER_WALL_W, LASER_WALL_DOUBLE_W);
-    public final static List<TileID> WALLS_SOUTH = Arrays.asList(WALL_S, WALL_SW, WALL_SE, LASER_WALL_S, LASER_WALL_DOUBLE_S);
-    public final static List<TileID> WALLS_EAST = Arrays.asList(WALL_E, WALL_SE, WALL_NE, LASER_WALL_E, LASER_WALL_DOUBLE_E);
-
-    /**
-     * Normal belts
-     */
-    public final static List<TileID> BELT_NORTH = Arrays.asList(BELT_E_TO_N, BELT_W_TO_N, BELT_N, BELT_SWN, BELT_WEN, BELT_SEN);
-    public final static List<TileID> BELT_SOUTH = Arrays.asList(BELT_S, BELT_E_TO_S, BELT_W_TO_S, BELT_EWS, BELT_NES, BELT_NWS);
-    public final static List<TileID> BELT_EAST = Arrays.asList(BELT_E, BELT_S_TO_E, BELT_N_TO_E, BELT_NSE, BELT_WNE, BELT_WSE);
-    public final static List<TileID> BELT_WEST = Arrays.asList(BELT_W, BELT_S_TO_W, BELT_N_TO_W, BELT_NSW, BELT_ENW, BELT_ESW);
-
-    /**
-     * Fast belts
-     */
-    public final static List<TileID> BELT_FAST_NORTH = Arrays.asList(BELT_FAST_E_TO_N, BELT_FAST_W_TO_N, BELT_FAST_N,
-            BELT_FAST_SWN, BELT_FAST_WEN, BELT_FAST_SEN);
-    public final static List<TileID> BELT_FAST_SOUTH = Arrays.asList(BELT_FAST_S, BELT_FAST_E_TO_S, BELT_FAST_W_TO_S,
-            BELT_FAST_WES, BELT_FAST_NES, BELT_FAST_NWS);
-    public final static List<TileID> BELT_FAST_EAST = Arrays.asList(BELT_FAST_E, BELT_FAST_S_TO_E, BELT_FAST_N_TO_E,
-            BELT_FAST_NSE, BELT_FAST_WNE, BELT_FAST_WSE);
-    public final static List<TileID> BELT_FAST_WEST = Arrays.asList(BELT_FAST_W, BELT_FAST_S_TO_W, BELT_FAST_N_TO_W,
-            BELT_FAST_NSW, BELT_FAST_NEW, BELT_FAST_ESW);
-
-
-
+    public final static List<TileID> START_POSITIONS = List.of(START_1, START_2, START_3, START_4, START_5, START_6, START_7, START_8);
+    public final static Set<Integer> WALLS_NORTH = Set.of(WALL_N.getId(), WALL_NE.getId(), WALL_NW.getId(), LASER_WALL_N.getId(), LASER_WALL_DOUBLE_N.getId());
+    public final static Set<Integer> WALLS_WEST = Set.of(WALL_W.getId(), WALL_NW.getId(), WALL_SW.getId(), LASER_WALL_W.getId(), LASER_WALL_DOUBLE_W.getId());
+    public final static Set<Integer> WALLS_SOUTH = Set.of(WALL_S.getId(), WALL_SW.getId(), WALL_SE.getId(), LASER_WALL_S.getId(), LASER_WALL_DOUBLE_S.getId());
+    public final static Set<Integer> WALLS_EAST = Set.of(WALL_E.getId(), WALL_SE.getId(), WALL_NE.getId(), LASER_WALL_E.getId(), LASER_WALL_DOUBLE_E.getId());
 
     private final int id;
 
